--- a/style/style.css
+++ b/style/style.css
@@ -722,7 +722,7 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
     background-size: cover;
     background-image: url('../image/about-work/decor-mobile.png');
-    bottom: 0;
+    bottom: -2px;
     left: 0;
 }
 
@@ -901,7 +901,7 @@ input[type="radio"].visually-hidden {
 
 .conditions-slide-container  {
     margin-top: 40px;
-
+    margin-top: -1px;
 }
 
 .conditions {
@@ -1279,7 +1279,7 @@ input[type="radio"].visually-hidden {
     content: '';
     width: 100%;
     height: 100px;
-    bottom: 0px;
+    bottom: -1px;
     left: 0;
     background-image: url('../image/requirements/requirements-botton-mobile.png');
     background-size: cover;
@@ -1292,7 +1292,7 @@ input[type="radio"].visually-hidden {
     .requirements::after {
         height: 258px;
         background-image: url('../image/requirements/requirements-top-desctop.png');
-        top: 0;
+        top: -1px;
     }
 
     .requirements::before {
@@ -1932,7 +1932,7 @@ input[type="radio"].visually-hidden {
     background-image: url('../image/reviews/reviews-decor-mobile-top.png');
     background-repeat: no-repeat;
     background-position: -200px 0;
-    top: -1px;
+    top: -2px;
     left: 0;
 }
 
@@ -1957,7 +1957,7 @@ input[type="radio"].visually-hidden {
     background-image: url('../image/reviews/reviews-decor-mobile-botton.png');
     background-repeat: no-repeat;
     background-position: -100px 0;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
 }
 
@@ -2183,7 +2183,7 @@ input[type="radio"].visually-hidden {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    top: 0;
+    top: -2px;
     left: 0;
 }
 
@@ -2496,6 +2496,7 @@ input[type="radio"].visually-hidden {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: -2px;
 }
 
 @media(min-width: 768px) {
@@ -2779,6 +2780,7 @@ input[type="radio"].visually-hidden {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    margin-top: -1px;
 }
 
 .quiz-wrap::before {
@@ -3171,7 +3173,7 @@ input[type="radio"].visually-hidden {
     border-bottom: 1px solid #595959;
 }
 .quiz-box {
-    max-height: 559px;
+    height: auto;
 }
 
 @media(min-width: 960px) {
